Revert "100vh on mobile fix"
This reverts commit d6e3a63dc9ef9852766625c343fa27297f6a2fef.

app height set to 100vh

--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
   box-sizing: border-box;
 }
 
 body {
-  min-height: 100vh;
-  min-height: fill-available;
-  min-height: -webkit-fill-available;
   margin: 0;
-  font-family: "Poppins", sans-serif;
-}
-
-html {
-  height: fill-available;
-  height: -webkit-fill-available;
+  font-family: 'Poppins', sans-serif;
 }
 
 .App {
@@ -37,6 +29,7 @@ html {
   background-color: #f7444e !important;
 }
 
+
 /* custom scrollbar  */
 ::-webkit-scrollbar {
   width: 8px;
@@ -51,6 +44,6 @@ html {
 ::-webkit-scrollbar-thumb {
   border-radius: 7px;
   background: #f7444e;
-  border-left: 3px solid #edf2f4;
-  border-right: 3px solid #edf2f4;
+  border-left: 3px solid #EDF2F4;
+  border-right: 3px solid #EDF2F4;
 }
